k8s/deployment-coordinator.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dac-coordinator
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dac-coordinator
  template:
    metadata:
      labels:
        app: dac-coordinator
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: coordinator
        image: ghcr.io/marigold-dev/dac-baseimage:master_a78b70c7_20230724101956        
        command: ["/bin/bash", "/scripts/coordinator.sh"]
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /health/live
            port: 11100
          initialDelaySeconds: 40
          periodSeconds: 20
          failureThreshold: 3
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
        ports:
        - containerPort: 11100
          protocol: TCP
          name: rpc
        volumeMounts:
        - name: dac-coordinator-dir-volume
          mountPath: /mounted_volume/dac/coordinator
          readOnly: false
        - name: dac-coordinator-reveal-dir-volume
          mountPath: /mounted_volume/dac/coordinator/reveals
          readOnly: false
        - name: dac-scripts-configmap
          mountPath: /scripts
          readOnly: true
      volumes:
      - name: dac-coordinator-dir-volume
        persistentVolumeClaim:
          claimName: dac-coordinator-dir-volume
      - name: dac-coordinator-reveal-dir-volume
        persistentVolumeClaim:
          claimName: dac-coordinator-reveal-dir-volume
      - name: dac-scripts-configmap
        configMap:
          name: dac-scripts-configmap
