k8s/deployment-member1.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dac-member1
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dac-member1
  template:
    metadata:
      labels:
        app: dac-member1
    spec:
      containers:
      - name: member1
        image: ghcr.io/marigold-dev/dac-baseimage:master_a78b70c7_20230724101956
        command: ["/bin/bash", "/scripts/member1.sh"]
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /health/live
            port: 11111
          initialDelaySeconds: 40
          periodSeconds: 20
          failureThreshold: 3
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        ports:
        - containerPort: 11111
          protocol: TCP
          name: rpc
        volumeMounts:
        - name: dac-member1-dir-volume
          mountPath: /mounted_volume/dac/member-1
          readOnly: false
        - name: dac-member1-reveal-dir-volume
          mountPath: /mounted_volume/dac/member-1/reveals
          readOnly: false
        - name: dac-scripts-configmap
          mountPath: /scripts
          readOnly: true
      volumes:
      - name: dac-member1-dir-volume
        persistentVolumeClaim:
          claimName: dac-member1-dir-volume
      - name: dac-member1-reveal-dir-volume
        persistentVolumeClaim:
          claimName: dac-member1-reveal-dir-volume
      - name: dac-scripts-configmap
        configMap:
          name: dac-scripts-configmap
