k8s/deployment-observer2.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dac-observer2
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dac-observer2
  template:
    metadata:
      labels:
        app: dac-observer2
    spec:
      containers:
      - name: observer2
        image: ghcr.io/marigold-dev/dac-baseimage:master_a78b70c7_20230724101956
        command: ["/bin/bash", "/scripts/observer2.sh"]
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /health/live
            port: 11122
          initialDelaySeconds: 40
          periodSeconds: 20
          failureThreshold: 3
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        ports:
        - containerPort: 11122
          protocol: TCP
          name: rpc
        volumeMounts:
        - name: dac-observer2-dir-volume
          mountPath: /mounted_volume/dac/observer-2
          readOnly: false
        - name: dac-observer2-reveal-dir-volume
          mountPath: /mounted_volume/dac/soru/wasm_2_0_0
          readOnly: false
        - name: dac-scripts-configmap
          mountPath: /scripts
          readOnly: true
      volumes:
      - name: dac-observer2-dir-volume
        persistentVolumeClaim:
          claimName: dac-observer2-dir-volume
      - name: dac-observer2-reveal-dir-volume
        persistentVolumeClaim:
          claimName: dac-observer2-reveal-dir-volume
      - name: dac-scripts-configmap
        configMap:
          name: dac-scripts-configmap
