k8s/deployment-rollup.yaml
# a dummy rollup kernel node that displays the content of a payload
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dac-rollup
spec:
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: dac-rollup
  template:
    metadata:
      labels:
        app: dac-rollup
    spec:
      containers:
      - name: node # This container runs the rollup-node
        # image: tezos/tezos:v17.1
        image: ghcr.io/marigold-dev/dac-baseimage:master_a78b70c7_20230724101956
        command: ["/bin/bash", "/scripts/rollup.sh"]
        ports:
        - containerPort: 8932
        resources:
          limits:
            cpu: 600m
            memory: 2Gi
          requests:
            cpu: 90m
            memory: 380Mi
        securityContext:
          runAsUser: 0
          runAsGroup: 0
        volumeMounts:
        - name: rollup-import-volume
          mountPath: /mounted_volume/rollup_workdir
          readOnly: false
        # this volume is shared with the observer1 node:
        - name: rollup-observer-shared-volume
          mountPath: /mounted_volume_shared/dac/
          readOnly: false
        - name: dac-scripts-volume
          mountPath: /scripts
      volumes:
      - name: rollup-import-volume
        persistentVolumeClaim:
          claimName: dac-rollup-import-volume
      - name: dac-scripts-volume
        configMap:
          name: dac-scripts-configmap
      - name: rollup-observer-shared-volume
        persistentVolumeClaim:
          claimName: dac-rollup-observer-shared-volume
