k8s/ingress-rollup.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dac-rollup
  namespace: dac-mondaynet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    # Using nginx-ingress as a reverse proxy to add CORS headers (currently missing in the smart-rollup-node binary):
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-expose-headers: "*"
spec:
  tls:
    - hosts:
        - dac-rollup.gcp.marigold.dev
      secretName: dac-rollup-ingress-cert-secret1
  rules:
    - host: dac-rollup.gcp.marigold.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dac-rollup
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: dac-rollup-service
  namespace: dac-mondaynet
spec:
  selector:
    app: dac-rollup
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8932
      name: http
